2024-07-01T01:35:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9736726009 # 343
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-01
* notice: last 14d: unq all: 4 6
* notice: prev accum: outdated-unq outdated-all / unq all: 400 790 / 407 797
* notice: next accum: outdated-unq outdated-all / unq all: 401 791 / 407 797
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-06-17] / []

2024-06-30T01:26:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9728337076 # 342
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-30
* notice: last 14d: unq all: 4 7
* notice: prev accum: outdated-unq outdated-all / unq all: 400 790 / 406 796
* notice: next accum: outdated-unq outdated-all / unq all: 400 790 / 407 797
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-06-29]

2024-06-29T01:18:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9720436124 # 341
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-29
* notice: last 14d: unq all: 3 6
* notice: prev accum: outdated-unq outdated-all / unq all: 399 789 / 406 796
* notice: next accum: outdated-unq outdated-all / unq all: 400 790 / 406 796
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-06-15] / []

2024-06-28T01:20:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9705922906 # 340