@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-07-01T01:35:32Z",
-  "count_outdated" : 791,
-  "uniques_outdated" : 401,
+  "timestamp" : "2024-07-02T01:20:47Z",
+  "count_outdated" : 792,
+  "uniques_outdated" : 402,
   "count" : 797,
   "uniques" : 407,
   "clones" : [
-    {
-      "timestamp": "2024-06-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-06-19T00:00:00Z",
       "count": 2,
