@@ -1,12 +1,7 @@
 {
-  "count": 6,
+  "count": 5,
   "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2024-06-18T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-06-19T00:00:00Z",
       "count": 2,
