@@ -1,3 +1,12 @@
+2024-07-02T01:20:47Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9753427525 # 344
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-02
+* notice: last 14d: unq all: 4 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 401 791 / 407 797
+* notice: next accum: outdated-unq outdated-all / unq all: 402 792 / 407 797
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-06-18] / []
+
 2024-07-01T01:35:32Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9736726009 # 343
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-01
